# qt_practice_notepad

./: CMakeLists.txt  icon_resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
